Made changes to website

--- a/index.html
+++ b/index.html
@@ -1,2 +1,43 @@
-<h1> Hi I am Jisnoo </h1>
-<div> This is my first webpage </div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Jisnoo Dev Pal</title>
+  <style>
+    /* CSS styles go here */
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Jisnoo Dev Pal</h1>
+  </header>
+
+  <main>
+    <section id="profile-info">
+      <h2>About Me</h2>
+      <img src="image/Profilepic.jpg" alt="Profile Picture">
+      <p>Hello , I am Jisnoo Dev Pal .</p>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Python</li>
+        
+      </ul>
+    </section>
+
+    
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>Email: jisnoodevpal AT gmail.com</p>
+      <p>Linkedin: <a href="https://www.linkedin.com/in/jisnoo/" target="_blank">Linkedin</a> </p>
+      <p>Github: <a href="https://github.com/jisnoo123/" target="_blank">Github</a> </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Jisnoo Dev Pal. All rights reserved.</p>
+  </footer>
+</body>
+</html>
