"Made new changes"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     /* CSS styles go here */
   </style>
 </head>
-<body>
+<body style="background-color: lightblue">
+    
   <header>
     <h1>Jisnoo Dev Pal</h1>
   </header>
@@ -40,4 +41,5 @@
     <p>&copy; 2023 Jisnoo Dev Pal. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
