Email removed from webpg

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="profile-info">
       <h2>About Me</h2>
       <img src="image/Profilepic.jpg" alt="Profile Picture">
-      <p>Hello , I am Jisnoo Dev Pal .</p>
+      <p>Hello , I am Jisnoo.</p>
     </section>
 
     <section id="skills">
@@ -31,7 +31,7 @@
 
     <section id="contact">
       <h2>Contact Me</h2>
-      <p>Email: jisnoodevpal AT gmail.com</p>
+
       <p>Linkedin: <a href="https://www.linkedin.com/in/jisnoo/" target="_blank">Linkedin</a> </p>
       <p>Github: <a href="https://github.com/jisnoo123/" target="_blank">Github</a> </p>
     </section>
