--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,6 @@
                 <li>HTML</li>
             </ol>
         </p>
-        <p>2023</p>
-        <p>Copyright © All rights reserved.</p>
+        <footer>Copyright ©. All rights reserved 2023.</footer>
     </body>
 </html>
