--- a/academics.html
+++ b/academics.html
@@ -23,7 +23,6 @@
         <p>
             I was the school topper scoring 95.5% in ISC.
         </p>
-        <p>2023</p>
-        <p>Copyright © All rights reserved.</p>
+        <footer>Copyright ©. All rights reserved 2023.</footer>
     </body>
 </html>
