--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         <img src="Profilepic.jpg" 
             width="10%"
         />
-        <h3>This is me.</h3>
-        <p>2023</p>
-        <p>Copyright © All rights reserved.</p>
-        
+        <h2>Jisnoo</h2>
+        <footer>Copyright ©. All rights reserved 2023.</footer>   
     </body>
 </html>  
