new website with styles

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>About me</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <a href="index.html">
@@ -29,6 +30,7 @@
                 <li>HTML</li>
             </ol>
         </p>
+        &nbsp;
         <footer>Copyright ©. All rights reserved 2023.</footer>
     </body>
 </html>
