--- a/academics.html
+++ b/academics.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <title>Academics</title>
+    </head>
     <body>
         <a href="index.html">
             Home
@@ -23,6 +27,7 @@
         <p>
             I was the school topper scoring 95.5% in ISC.
         </p>
+        &nbsp;
         <footer>Copyright ©. All rights reserved 2023.</footer>
     </body>
 </html>
