--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css">
         <title>Jisnoo Dev Pal</title>
     </head>   
     <body>   
@@ -25,7 +26,7 @@
             I am a student. I am interested in the field of Computer Science. Currently looking for admission into colleges.
         </p>
         <img src="Profilepic.jpg" 
-            width="10%"
+            width="35%"
         />
         <h2>Jisnoo</h2>
         <footer>Copyright ©. All rights reserved 2023.</footer>   
