--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
             About me
         </a>
         &nbsp;
-        <a href="Academics.html">
+        <a href="academics.html">
             &nbsp;
             Academics
         </a>
