RKMRC Added and Certificates also

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,22 +13,17 @@
         </a>
         &nbsp;
         <a href="academics.html">
-            &nbsp;
             Academics
+        </a>
+        &nbsp;
+        <a href="credentials.html">
+            Certificates
         </a>
         <hr></hr>
 
         <h1>About Jisnoo</h1>
         <p>
-            I want to pursue research in Computer Science.
-        </p>
-        <p>
-            Here is a list of my skills.
-            <ol>
-                <li>Python</li>
-                <li>Java</li>
-                <li>HTML</li>
-            </ol>
+            I am a student at RKMRC, Narendrapur. I like to code in Python.
         </p>
         &nbsp;
         <footer>Copyright ©. All rights reserved 2023.</footer>
