--- a/academics.html
+++ b/academics.html
@@ -13,8 +13,11 @@
         </a>
         &nbsp;
         <a href="academics.html">
-            &nbsp;
             Academics
+        </a>
+        &nbsp;
+        <a href="credentials.html">
+            Certificates
         </a>
         <hr></hr>
 
@@ -22,10 +25,20 @@
             My Academics
         </h1>
         <p>
-            I was a student of Central Modern School, ISC 2023 Batch.
+            Present: Ramakrishna Mission Residential College (Autonomous), Narendrapur.
+            &nbsp;
+            Course: BSc Computer Science.
+            &nbsp;
+            Duration: 4 years.
+            &nbsp;
         </p>
         <p>
-            I was the school topper scoring 95.5% in ISC.
+            School: Central Modern School , Baranagar.
+            &nbsp;
+            ISC Result: 95.5% 
+            &nbsp;
+            Achievement: School Topper
+            &nbsp;
         </p>
         &nbsp;
         <footer>Copyright ©. All rights reserved 2023.</footer>
