--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         </a>
         &nbsp;
         <a href="academics.html">
-            &nbsp;
             Academics
+        </a>
+        &nbsp;
+        <a href="credentials.html">
+            Certificates
         </a>
         <hr></hr>
 
@@ -23,7 +26,7 @@
             Welcome to my website.
         </h2>
         <p>
-            I am a student. I am interested in the field of Computer Science. Currently looking for admission into colleges.
+            I am a first year BSc Computer Science student at Ramakrishna Mission Residential College (Autonomous), Narendrapur.
         </p>
         <img src="Profilepic.jpg" 
             width="35%"
