--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     }
 
     .jumbotron {
-      background-color: #715806;
+      background-color: #0F0A0A;
       color: #fff;
       padding: 60px;
     }
 
     .info-section {
-      background-color: #715806;
+      background-color: #0F0A0A;
       padding: 20px;
       border-radius: 10px;
     }
@@ -47,8 +47,8 @@
     }
 
     .copyright-section {
-      background-color: rgb(136, 6, 6);
-      color: #fff;
+      background-color: #23001E;
+      color: rgb(255, 255, 255);
       padding: 10px 0;
       text-align: center;
     }
