News section moved beneath

--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
 
   <!-- Home Section -->
   <div class="container">
+      <!-- Biography Section-->
+      <section id="biography">
+        <h2>Biography</h2>
+        <hr style="width:50%;text-align:left;margin-left:0">
+
+        <p>I am a first year BSc Computer Science student at Ramakrishna 
+          Mission Residential College (Autonomous), Narendrapur.</p>
+      </section>
+
+      <br>
+      <br>
+
       <!-- News Section -->
       <h2>News</h2>
       <hr style="width:50%;text-align:left;margin-left:0">
@@ -123,17 +135,6 @@
           <br>
 
       </itemize>
-
-      <br>
-      <br>
-
-      <section id="biography">
-        <h2>Biography</h2>
-        <hr style="width:50%;text-align:left;margin-left:0">
-
-        <p>I am a first year BSc Computer Science student at Ramakrishna 
-          Mission Residential College (Autonomous), Narendrapur.</p>
-      </section>
 
       <br>
       <br>
