--- a/gallery.html
+++ b/gallery.html
@@ -88,6 +88,25 @@
 
         </div>
         <div class="row" id="lightgallery">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/chrysanthemum_bee_pink.jpg" data-sub-html="<h4>Winter Chrysanthemum</h4><p>Bees on a Pink Chrysanthemum, 4th Jan 2023</p>">
+            <a href="#"><img src="images/gallery/chrysanthemum_bee_pink_thumb.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/chrysanthemum_pink.jpg" data-sub-html="<h4>Winter Chrysanthemum</h4><p>Pink Chrysanthemum, 4th Jan 2023</p>">
+            <a href="#"><img src="images/gallery/chrysanthemum_pink_thumb.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/chrysanthemum_red.jpg" data-sub-html="<h4>Winter Chrysanthemum</h4><p>Red Chrysanthemum, 4th Jan 2023</p>">
+            <a href="#"><img src="images/gallery/chrysanthemum_red_thumb.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/chrysanthemum_white.jpg" data-sub-html="<h4>Winter Chrysanthemum</h4><p>White Chrysanthemum, 4th Jan 2023</p>">
+            <a href="#"><img src="images/gallery/chrysanthemum_white_thumb.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/chrysanthemum_yellow.jpg" data-sub-html="<h4>Winter Chrysanthemum</h4><p>Yellow Chrysanthemum, 4th Jan 2023</p>">
+            <a href="#"><img src="images/gallery/chrysanthemum_yellow_thumb.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/dahlia_pinata_red.jpg" data-sub-html="<h4>Winter Chrysanthemum</h4><p>Red Dahlia, 4th Jan 2023</p>">
+            <a href="#"><img src="images/gallery/dahlia_pinata_red_thumb.png" alt="IMage" class="img-fluid"></a>
+          </div>
+
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/college_morning.jpg" data-sub-html="<h4>RKMRC, Morning View</h4><p>Shot this during my daily jogging, 18th Dec 2023.</p>">
             <a href="#"><img src="images/gallery/college_morning_thumb.jpg" alt="IMage" class="img-fluid"></a>
           </div>
