--- a/gallery.html
+++ b/gallery.html
@@ -88,6 +88,9 @@
 
         </div>
         <div class="row" id="lightgallery">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/jisnoo_rkmrc.jpg" data-sub-html="<h4>Jisnoo</h4><p>Me and my college, 6th Jan 2023</p>">
+            <a href="#"><img src="images/gallery/jisnoo_rkmrc_thumb.png" alt="IMage" class="img-fluid"></a>
+          </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/chrysanthemum_bee_pink.jpg" data-sub-html="<h4>Winter Chrysanthemum</h4><p>Bees on a Pink Chrysanthemum, 4th Jan 2023</p>">
             <a href="#"><img src="images/gallery/chrysanthemum_bee_pink_thumb.png" alt="IMage" class="img-fluid"></a>
           </div>
