--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
           <itemize>
 
+              <span style="font-weight: bold;"> <b>Feb '24 </b></span> - Secured the top position in Semester-I with 9.0 SGPA  <br>
               <span style="font-weight: bold;"> <b>July '23 </b></span> - Admitted to RKMRC.  <br>    
               <span style="font-weight: bold;"> <b>May '23 </b> </span> - Recognized as the 
               <b>ISC School Topper</b>.
@@ -239,7 +240,7 @@
 
         <!-- Copyright Section -->
         <div class="copyright-section">
-        <p> 2023 Copyright &copy; Jisnoo Dev Pal</p>
+        <p> 2023-2024 Copyright &copy; Jisnoo Dev Pal</p>
         </div>
 
         <!-- Bootstrap JS and Popper.js (Optional) -->
