--- a/gallery.html
+++ b/gallery.html
@@ -88,8 +88,12 @@
 
         </div>
         <div class="row" id="lightgallery">
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/jisnoo_rkmrc_corridor.jpg" data-sub-html="<h4>Jisnoo</h4><p>RKMRC Second Floor Outside View, 20th July 2024</p>">
-            <a href="#"><img src="images/gallery/jisnoo_rkmrc_corridor_thumb.jpg" alt="IMage" class="img-fluid"></a>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/jisnoo_rkmrc_ground.jpeg" data-sub-html="<h4>Jisnoo</h4><p>RKMRC College Ground, 22nd July 2024</p>">
+            <a href="#"><img src="images/gallery/jisnoo_rkmrc_ground_thumb.jpeg" alt="IMage" class="img-fluid"></a>
+          </div>
+
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/jisnoo_rkmrc_balcony.jpeg" data-sub-html="<h4>Jisnoo</h4><p>RKMRC, 22nd July 2024</p>">
+            <a href="#"><img src="images/gallery/jisnoo_rkmrc_balcony_thumb.jpeg" alt="IMage" class="img-fluid"></a>
           </div>
 
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/jisnoo_rkmrc.jpg" data-sub-html="<h4>Jisnoo</h4><p>Me and my college, 6th Jan 2024</p>">
@@ -185,7 +189,7 @@
 
   <!-- Copyright Section -->
   <div class="copyright-section">
-    <p> 2023 Copyright &copy; Jisnoo Dev Pal</p>
+    <p> 2023-2024 Copyright &copy; Jisnoo Dev Pal</p>
     </div>
 </html>
 
