Rkm logo gallery

--- a/gallery.html
+++ b/gallery.html
@@ -88,6 +88,11 @@
 
         </div>
         <div class="row" id="lightgallery">
+
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/jisnoo_rkmrc_logo.jpeg" data-sub-html="<h4>Jisnoo</h4><p>RKMRC, 27th July 2024</p>">
+            <a href="#"><img src="images/gallery/jisnoo_rkmrc_logo_thumb.jpeg" alt="IMage" class="img-fluid"></a>
+          </div>
+
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/gallery/jisnoo_rkmrc_ground.jpeg" data-sub-html="<h4>Jisnoo</h4><p>RKMRC College Ground, 22nd July 2024</p>">
             <a href="#"><img src="images/gallery/jisnoo_rkmrc_ground_thumb.jpeg" alt="IMage" class="img-fluid"></a>
           </div>
