--- a/gallery.html
+++ b/gallery.html
@@ -40,24 +40,24 @@
 
 
       <!-- Navigation Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #14281D;">
-        
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
-            </li>
-          </ul>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Jisnoo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center"  href="index.html"><img src="images/logos/home.png" width="30" height="30" class="me-2"><span class="align-self-center">Home</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center"  href="gallery.html"><img src="images/logos/gallery.png" width="30" height="30" class="me-2"><span class="align-self-center">Gallery</span></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
-
-  
+    </nav>
 
   <body>
 
@@ -186,7 +186,7 @@
 
   <!-- Copyright Section -->
   <div class="copyright-section">
-    <p> 2023-2024 Copyright &copy; Jisnoo Dev Pal</p>
+    <p> 2023-2025 Copyright &copy; Jisnoo Dev Pal</p>
     </div>
 </html>
 
