Add Data Visualization certificate

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
     
                     </p>
                     <p class="custom-paragraph"><strong>My Certificates:</strong><br>
+                        <a class="cert-link" href="images/certificates/Data_visualization.png.png">
+                            Data Visualization - Kaggle       
+                        </a> 
+
+                        <br>
                         <a class="cert-link" href="images/certificates/Pandas.png">
                             Pandas - Kaggle       
                         </a> 
