Add new certificate on Data visualization

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     
                     </p>
                     <p class="custom-paragraph"><strong>My Certificates:</strong><br>
-                        <a class="cert-link" href="images/certificates/Data_visualization.png.png">
+                        <a class="cert-link" href="images/certificates/Data_visualization.png">
                             Data Visualization - Kaggle       
                         </a> 
 
