--- a/index.html
+++ b/index.html
@@ -111,14 +111,18 @@
                         <a href="https://www.linkedin.com/in/jisnoo/">
                             <img src="images/logos/linkedin-logo.png" alt="Linkedin" class="img-fluid" width="40" height="40">
                         </a>
+                        <a href="./images/CV/two_pg_cv.pdf">
+                            <img src="images/logos/cv.png" alt="CV" class="img-fluid" width="40" height="40">
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="row section">
                 <div class="col-12">
                     <h2>Biography</h2>
-                    <p>I am currently a second-year B.Sc. (Hons.) Computer Science student
-                       at Ramakrishna Mission Residential College (Autonomous), Narendrapur.</p>
+                    <p>I am a second-year Computer Science student with a deep passion for innovative problem-solving and lifelong learning. Driven by curiosity and equipped with strong analytical skills, I enjoy exploring diverse subjects and expanding my knowledge. My primary interest lies in Artificial Intelligence, with a focus on leveraging its potential to solve real-world challenges and drive social impact.
+                       I thrive in collaborative environments, excelling in teamwork and effective communication. To further develop my expertise and contribute meaningfully to the field of AI, I am actively pursuing opportunities to engage with open-source projects. My goal is to apply my skills to address current challenges in AI while creating solutions that benefit the world.
+                    </p>
                 </div>
             </div>
             
@@ -213,8 +217,10 @@
 
             <div class="row section">
                 <div class="col-12">
-                    <h2>Interests and Hobbies</h2>
-                    <p>Workout, Music, Running, Movies.</p>
+                    <h2>Trivia</h2>
+                    <p>Interests and Hobbies: Workout, Music, Running, Movies.</p>
+                    
+                    <p>Brother's website: <a href="https://jimut123.github.io/">Jimut</a></p>
                 </div>
             </div>
 
