--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <a href="https://www.linkedin.com/in/jisnoo/">
                             <img src="images/logos/linkedin-logo.png" alt="Linkedin" class="img-fluid" width="40" height="40">
                         </a>
-                        <a href="./images/CV/two_pg_cv.pdf">
+                        <a href="./CV/two_pg_cv.pdf">
                             <img src="images/logos/cv.png" alt="CV" class="img-fluid" width="40" height="40">
                         </a>
                     </div>
