--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img src="images/projects/collager/collager_teaser.png" alt="simpler-env">
       </div>
       <div class="content">
-        <span class="title">Collage: Converting images and videos to dataset collage 
+        <span class="title">Collage: Converting images and videos to dataset collages 
         </span>
         <div>
           Replaces patches of images or video frames with nearest neighbouring image in the dataset.
