--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <img src="images/projects/collager/collager_teaser.png" alt="simpler-env">
         </div>
         <div class="content">
-          <span class="title">Collage: Converting images and videos to dataset collages` 
+          <span class="title">Collage: Converting images and videos to dataset collages
           </span>
           <div>
             Replaces patches of images or video frames with nearest neighbouring image in the dataset.
@@ -79,7 +79,7 @@
           <div>Jun' 25</div>
           <div>
             <a href="https://github.com/jisnoo123/collage" target="_blank">
-              [Github]<!-- <img src="images/logos/github.png" alt="GitHub" style="width: 5%; height: 5%;" class="github-icon"> -->
+              [code]<!-- <img src="images/logos/github.png" alt="GitHub" style="width: 5%; height: 5%;" class="github-icon"> -->
             </a>
           </div>
         </div>
