Add demo link on hugging face

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
           <div>Jun' 25</div>
           <div>
             <a href="https://github.com/jisnoo123/collage" target="_blank">
-              [code]<!-- <img src="images/logos/github.png" alt="GitHub" style="width: 5%; height: 5%;" class="github-icon"> -->
+              [code <img src="images/logos/github.png" alt="GitHub" style="width: 3%; height: 3%;" class="github-icon">]
+            </a>
+
+            <a href="https://huggingface.co/spaces/jisnoo/collage_img" target="_blank">
+              [Demo 🤗]
             </a>
           </div>
         </div>
