--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="block" style="width: 30%; max-width: 30%;">
-        <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile_photo/jisnoo.jpg"></a>
+        <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile_photo/jisnoo.png"></a>
       </div>
     </div>
 
